# Grok_Build_Booster

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  export.rs  lib.rs  main.rs
src/core/: git.rs  mod.rs  session.rs  watch.rs
src/enrich/: mod.rs  remote.rs  rules.rs
src/hooks/: forward.rs  install.rs  mod.rs  server.rs
src/oauth/: constants.rs  flow.rs  mod.rs  pkce.rs  store.rs
src/state/: history.rs  mod.rs  persist.rs  telemetry.rs
src/ui/: app.rs  dashboard.rs  header.rs  mod.rs  sidebar.rs  theme.rs
tests/: hooks_integration.rs
